--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
-    "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.5",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
@@ -46,7 +45,6 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.4.4",
     "react-select": "^5.8.0",
     "react-spinner": "^0.2.7",
@@ -55,6 +53,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
